--- a/Dainzu/Base.lproj/Main.storyboard
+++ b/Dainzu/Base.lproj/Main.storyboard
@@ -3,6 +3,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Game View Controller-->
@@ -18,9 +21,152 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="oj3-at-C0J" kind="presentation" identifier="aboutSegue" id="JHh-JO-2IE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--About View Controller-->
+        <scene sceneID="03d-Lz-z8A">
+            <objects>
+                <viewController id="oj3-at-C0J" customClass="AboutViewController" customModule="Dainzu" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WuZ-Rt-awv"/>
+                        <viewControllerLayoutGuide type="bottom" id="AOQ-AC-amA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AhO-zC-AMf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbp-MD-CdI">
+                                <rect key="frame" x="20" y="28" width="90" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="xbp-MD-CdI" secondAttribute="height" multiplier="1:1" id="kDI-wm-jMI"/>
+                                </constraints>
+                                <state key="normal" image="home">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="homeButtonPressed:" destination="oj3-at-C0J" eventType="touchDown" id="ACy-hv-gOM"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="villouLogo" translatesAutoresizingMaskIntoConstraints="NO" id="RW9-fg-k4Q">
+                                <rect key="frame" x="250" y="224" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="AWN-ln-75m"/>
+                                    <constraint firstAttribute="width" constant="100" id="qDH-FY-cG3"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="villou.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hay-YG-oZd">
+                                <rect key="frame" x="234" y="340" width="133" height="37"/>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a6T-nF-Scs" userLabel="Twitter Button">
+                                <rect key="frame" x="134" y="312" width="52" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="NcH-qe-XYa"/>
+                                    <constraint firstAttribute="height" constant="52" id="qWe-bq-zCt"/>
+                                </constraints>
+                                <state key="normal" image="twitter">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="twitterButtonPressed:" destination="oj3-at-C0J" eventType="touchDown" id="dE8-t0-xmB"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s4S-DY-Ll3" userLabel="Facebook Button">
+                                <rect key="frame" x="134" y="227" width="52" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="Ik6-Z2-eBt"/>
+                                    <constraint firstAttribute="width" constant="52" id="h7U-xY-Da9"/>
+                                </constraints>
+                                <state key="normal" image="facebook">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="facebookButtonPressed:" destination="oj3-at-C0J" eventType="touchDown" id="ocz-Ig-oBa"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mr Market" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j4J-7t-eSg">
+                                <rect key="frame" x="411" y="281" width="54" height="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFN-wj-bdP">
+                                <rect key="frame" x="414" y="229" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="73V-G1-QMH"/>
+                                    <constraint firstAttribute="height" constant="48" id="Qv2-pa-43R"/>
+                                </constraints>
+                                <state key="normal" image="mrMarketIcon"/>
+                                <connections>
+                                    <action selector="mrMarketButtonPressed:" destination="oj3-at-C0J" eventType="touchDown" id="nJL-Bd-1H7"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lnJ-lE-ILB">
+                                <rect key="frame" x="414" y="314" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="7Pk-3c-7Dk"/>
+                                    <constraint firstAttribute="height" constant="48" id="CU2-1Z-e74"/>
+                                </constraints>
+                                <state key="normal" image="hiInvestIcon"/>
+                                <connections>
+                                    <action selector="hiInvestButtonPressed:" destination="oj3-at-C0J" eventType="touchDown" id="m1M-RX-RcD"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hi Invest" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z8i-FX-K3P">
+                                <rect key="frame" x="415" y="366" width="46" height="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.40000000000000002" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xbp-MD-CdI" firstAttribute="height" secondItem="AhO-zC-AMf" secondAttribute="height" multiplier="0.15" id="0qf-dM-bab"/>
+                            <constraint firstItem="RW9-fg-k4Q" firstAttribute="centerY" secondItem="AhO-zC-AMf" secondAttribute="centerY" constant="-26" id="48w-ab-qw6"/>
+                            <constraint firstItem="Z8i-FX-K3P" firstAttribute="top" secondItem="lnJ-lE-ILB" secondAttribute="bottom" constant="4" id="4SN-7W-Iua"/>
+                            <constraint firstItem="gFN-wj-bdP" firstAttribute="centerY" secondItem="s4S-DY-Ll3" secondAttribute="centerY" id="8T2-nn-7fp"/>
+                            <constraint firstItem="a6T-nF-Scs" firstAttribute="top" secondItem="s4S-DY-Ll3" secondAttribute="bottom" constant="33" id="Bl1-Sh-sSD"/>
+                            <constraint firstItem="lnJ-lE-ILB" firstAttribute="centerY" secondItem="a6T-nF-Scs" secondAttribute="centerY" id="C1t-oJ-rgv"/>
+                            <constraint firstItem="Z8i-FX-K3P" firstAttribute="centerX" secondItem="lnJ-lE-ILB" secondAttribute="centerX" id="Jb9-Jg-BYx"/>
+                            <constraint firstItem="lnJ-lE-ILB" firstAttribute="centerX" secondItem="gFN-wj-bdP" secondAttribute="centerX" id="K5s-bF-4C1"/>
+                            <constraint firstItem="hay-YG-oZd" firstAttribute="top" secondItem="RW9-fg-k4Q" secondAttribute="bottom" constant="16" id="KMD-J7-83A"/>
+                            <constraint firstItem="j4J-7t-eSg" firstAttribute="centerX" secondItem="gFN-wj-bdP" secondAttribute="centerX" id="KSp-nB-kk5"/>
+                            <constraint firstItem="RW9-fg-k4Q" firstAttribute="leading" secondItem="s4S-DY-Ll3" secondAttribute="trailing" constant="64" id="dNg-Wb-W0h"/>
+                            <constraint firstItem="hay-YG-oZd" firstAttribute="centerX" secondItem="RW9-fg-k4Q" secondAttribute="centerX" id="e4m-iC-C4y"/>
+                            <constraint firstItem="gFN-wj-bdP" firstAttribute="leading" secondItem="RW9-fg-k4Q" secondAttribute="trailing" constant="64" id="eJH-Y1-nfY"/>
+                            <constraint firstItem="j4J-7t-eSg" firstAttribute="top" secondItem="gFN-wj-bdP" secondAttribute="bottom" constant="4" id="h7e-lj-MjC"/>
+                            <constraint firstItem="xbp-MD-CdI" firstAttribute="top" secondItem="WuZ-Rt-awv" secondAttribute="bottom" constant="8" symbolic="YES" id="hRp-Zw-ssm"/>
+                            <constraint firstItem="a6T-nF-Scs" firstAttribute="centerX" secondItem="s4S-DY-Ll3" secondAttribute="centerX" id="mSI-Gn-nHK"/>
+                            <constraint firstItem="xbp-MD-CdI" firstAttribute="leading" secondItem="AhO-zC-AMf" secondAttribute="leadingMargin" id="o9C-aB-Cin"/>
+                            <constraint firstItem="RW9-fg-k4Q" firstAttribute="centerX" secondItem="AhO-zC-AMf" secondAttribute="centerX" id="ymk-w1-Ji9"/>
+                            <constraint firstItem="s4S-DY-Ll3" firstAttribute="centerY" secondItem="RW9-fg-k4Q" secondAttribute="centerY" constant="-21" id="znj-XS-RoO"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="hiInvestButton" destination="lnJ-lE-ILB" id="Gnx-n3-enj"/>
+                        <outlet property="mrMarketButton" destination="gFN-wj-bdP" id="4dT-47-mq3"/>
+                        <segue destination="8UQ-us-tUe" kind="unwind" identifier="exitAboutSegue" unwindAction="unwindToInitialViewController:" id="H7c-Zs-rAh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="haP-a4-pAa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="8UQ-us-tUe" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="313" y="1056"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="facebook" width="200" height="200"/>
+        <image name="hiInvestIcon" width="100" height="100"/>
+        <image name="home" width="100" height="100"/>
+        <image name="mrMarketIcon" width="100" height="100"/>
+        <image name="twitter" width="200" height="200"/>
+        <image name="villouLogo" width="100" height="100"/>
+    </resources>
 </document>
